# Q1_25_Builder_mips-dev

./: README.md
BidVault (Capstone Project)/: readme.md
BidVault (Capstone Project)/escrow_bidding/: Anchor.toml  Cargo.toml  readme
BidVault (Capstone Project)/escrow_bidding/programs/escrow_bidding/: Cargo.toml
BidVault (Capstone Project)/escrow_bidding/programs/escrow_bidding/src/: lib.rs
BidVault (Capstone Project)/escrow_bidding/tests/: escrow_bidding.ts
Pre-reqs/: airdrop.ts  convert.ts  enroll.ts  keygen.ts  readme  transfer.ts
Pre-reqs Rust/: Cargo.toml  readme
Pre-reqs Rust/src/: lib.rs  transfer_funds.rs
Pre-reqs Rust/src/programs/: turbin3_prereq.rs
Pre-reqs/programs/: Turbin3_prereq.ts
Prerequisites_Q1/: readme.md
W1 (Prerequisites)/: readme
W1 (Prerequisites)/Rust/: readme.md
W1 (Prerequisites)/TypeScript/: readme.md
W2/: readme
W3/: readme
W4/: readme
W5/: readme
