[package]
name = "escrow_bidding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "escrow_bidding"
crate-type = ["cdylib"]
path = "programs/escrow_bidding/src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"

